# bitcoin-nostr-chat

./: .gitignore  .pre-commit-config.yaml  README.md  demo.py  pyproject.toml
.github/workflows/: python-tests.yml
bitcoin_nostr_chat/: annoucement_dm.py  async_dm_connection.py  async_thread.py  base_dm.py  chat.py  chat_dm.py  default_relays.py  dialogs.py  dm_connection.py  group_chat.py  label_connector.py  nostr.py  nostr_sync.py  notification_handler.py  relay_list.py  signals_min.py  utils.py
bitcoin_nostr_chat/connected_devices/: chat.py  chat_gui.py  connected_devices.py  ui.py
bitcoin_nostr_chat/ui/: bitcoin_dm_chat_gui.py  chat_component.py  chat_gui.py  device_manager.py  ui.py  util.py
tests/: conftest.py  test_chat_gui.py  test_chat_outgoing_status.py  test_device_manager.py  test_dm_connection.py  test_relays.py
