[tool.black]
line-length = 110

[tool.mypy]
no_implicit_optional = false
ignore_missing_imports = true
show_error_codes = true 
disable_error_code = "assignment"



[tool.poetry]
name = "bitcoin-nostr-chat"
version = "2.1.2"
authors = ["andreasgriffin <andreasgriffin@proton.me>"]
license = "GPL-3.0"
readme = "README.md"
description = "A Nostr Chat with participant discovery"
homepage = "https://github.com/andreasgriffin/bitcoin-nostr-chat"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
cbor2 = "^5.6.3"
requests = "^2.31.0"
pyqt6 = "^6.6.1" 
bitcoin-qr-tools = {  git = "https://github.com/andreasgriffin/bitcoin-qr-tools.git",  branch = "main" }
bitcoin-safe-lib = {  git = "https://github.com/andreasgriffin/bitcoin-safe-lib.git", branch = "main" }
nostr-sdk = "^0.44.0"



[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
ping3 = "^4.0.8"
websocket-client = "^1.8.0"
pytest-qt = "^4.4.0"
 
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"








[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
# E+F are defaults; include I for isort-equivalent import sorting and a few handy extras.
select = ["E", "F", "I", "B", "UP"] 
ignore = ["UP046","UP035"]


[tool.ruff.format]
# Ruff formatter is Black-compatible; keep defaults or tweak here.
